Fixes for credits section in dark mode

--- a/app/components/settings/settings-pages/settings-credits/settings-credits-common.scss
+++ b/app/components/settings/settings-pages/settings-credits/settings-credits-common.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/mixins.scss";
+
 .settings-container {
     ::ng-deep {
         .entry-title {
@@ -19,5 +21,12 @@
         color: #0000EE;
         font-size: 18;
         margin-bottom: 15;
+    }
+}
+
+@include for-dark-theme-class(settings-container) {
+    .license-url,
+    .thanks-url {
+        color: rgb(117, 117, 255);
     }
 }
